--- a/src/Models/Models.csproj
+++ b/src/Models/Models.csproj
@@ -14,6 +14,7 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="ProposedChangesEntities\" />
+    <Folder Include="Enums\" />
+    <Folder Include="ProposedChanges\" />
   </ItemGroup>
 </Project>
