--- a/src/DataAccess/DataAccess.csproj
+++ b/src/DataAccess/DataAccess.csproj
@@ -8,4 +8,9 @@
   <ItemGroup>
     <ProjectReference Include="..\Models\Models.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="ProposedWriteService\Interfaces\" />
+    <Folder Include="ProposedWriteService\ProposedDtos\" />
+    <Folder Include="RealWriteService\Interfaces\" />
+  </ItemGroup>
 </Project>
